cleaned up routing and file structure for adding events page

--- a/spawn/client/templates/addition/addEvent.html
+++ b/spawn/client/templates/addition/addEvent.html
@@ -1,6 +1,5 @@
 <template name="addEvent">
-  <div id="main">
-    <h1>+ Spawn</h1>
+  <div>
     <form>
       Name:
       <input type="text" name="eventName" placeholder="Type to add new tasks" />
