added event hosts

--- a/spawn/client/templates/event.html
+++ b/spawn/client/templates/event.html
@@ -1,5 +1,5 @@
 <template name="event">
     <span> <button>
         Join
-      </button>   {{name}}  AT  {{time}}</span> <br>
+      </button>    {{name}}    BY    {{host}}    AT    {{time}}</span> <br>
 </template>
