--- a/spawn/client/templates/addition/eventsPage.html
+++ b/spawn/client/templates/addition/eventsPage.html
@@ -1,7 +1,10 @@
 <template name="eventsPage">
 	<div>
 		<h1>Choose an event!</h1>
-		<p>example1</p>
-		<p>example 2</p>
+		<ul>
+			{{#each tasks}}
+				{{> event}}
+			{{/each}}
+		</ul>
 	</div>
 </template>
