--- a/spawn/client/templates/application/layout.html
+++ b/spawn/client/templates/application/layout.html
@@ -1,7 +1,32 @@
 <template name="layout">
-	<div class="container">
-		<div id="main">
+	<body style="margin-top: 66px;">
+		<nav class="navbar navbar-default navbar-fixed-top" > 
+			<div class="container-fluid">
+				<ul class="nav navbar-nav navbar-left">
+					<li><a class="navbar-link" id="backLink" href="/">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav">
+					<li><a class="navbar-brand" href="/">Spawn</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-left">
+					<li>
+						<a class="navbar-link" id="newEventLink" href="/">
+							<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+						</a>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<span class="navbar-text">{{> login}}</span>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<div id="main" style="margin-left: 15px; margin-right: 15px;">
 			{{> yield}}
 		</div>
-	</div>
+	</body>
 </template>
