implemented event data passing to event-specific detail pages, and also made general flow and visual improvements

--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -9,8 +9,9 @@
         </div>
         <div class="col-lg-6">
           <ul class="list-group">
-            <li class="list-group-item">Event Name</li>
-            <li class="list-group-item">Event Owner</li>
+            <li class="list-group-item">Event: {{name}}</li>
+            <li class="list-group-item">Host: {{host}}</li>
+            <li class="list-group-item">Time: {{time}}</li>
             <li class="list-group-item">Location</li>
           </ul>
           <div class="well"><span style="font-size:200%">5/10 spawned in</span></div>
@@ -26,7 +27,7 @@
       <div class = "row">
         <div class="col-lg-3"></div>
         <div class="col-lg-6 panel panel-default">
-          <span> EVENT DESCRIPTION EVENT DESCRIPTION EVENT DESCRIPTION EVENT DESCRIPTION EVENT DESCRIPTION EVENT DESCRIPTION EVENT DESCRIPTION EVENT DESCRIPTION EVENT DESCRIPTION EVENT DESCRIPTION </span>
+          <span> Description: {{description}} </span>
         </div>
         <div class="col-lg-3"></div>
       </div>
