--- a/spawn/client/templates/application/layout.html
+++ b/spawn/client/templates/application/layout.html
@@ -12,7 +12,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-left">
 					<li>
-						<a class="navbar-link" id="newEventLink" href="/">
+						<a class="navbar-link" id="newEventLink" href="/add">
 							<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 						</a>
 					</li>
