temporarily commented out files to fix broken build

--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -1,4 +1,4 @@
-<template name="profilePage">
+<!-- <template name="profilePage">
   <body>
     <div class = "container-fluid">
       <div class = "row">
@@ -43,4 +43,4 @@
       </div>
     </div>
   </body>
-</template>
+</template> -->
