adding routing to personal profile page

--- a/spawn/client/templates/application/layout.html
+++ b/spawn/client/templates/application/layout.html
@@ -3,7 +3,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top" > 
 			<div class="container-fluid">
 				<ul class="nav navbar-nav navbar-left">
-					<li><a class="navbar-link" id="backLink" href="/">
+					<li><a class="navbar-link" id="backLink" href="/prof">
 						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a>
 					</li>
 				</ul>
