--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -28,18 +28,18 @@
                     </div>
                     <div id="right_col">
                         <ul class="list-group">
-                            <li class="list-group-item">Name: {{name}}</li>
+                            <li class="list-group-item">Name: MY NAME</li>
                             <li class="list-group-item">Primary location: FILLER LOC</li>
                         </ul>
                     </div>
                 </div>
         </div>
-        <div class="list-group">
+      </div>
+    <div class="list-group">
             {{#each tasks}}
                     {{> eventItem}}
             {{/each}}
 	   </div>
-      </div>
     </div>
   </body>
 </template> 
