added chat feature to event pages, added some mongo collections, and updated profile data

--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -56,6 +56,13 @@
           </div>
         </div>
       </div>
+      <div class = "row well">
+        <h2>Comments</h2>
+          {{#each comments}}
+            {{> commentItem}}
+          {{/each}}
+          {{> postComment}}
+      </div>
     </div>
   </body>
 </template>
