--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -28,7 +28,7 @@
                     </div>
                     <div id="right_col">
                         <ul class="list-group">
-                            <li class="list-group-item">Name: MY NAME</li>
+                            <li class="list-group-item">User: {{currentUser.profile.name}}</li>
                             <li class="list-group-item">Primary location: FILLER LOC</li>
                         </ul>
                     </div>
