--- a/spawn/client/templates/addition/postComment.html
+++ b/spawn/client/templates/addition/postComment.html
@@ -1,8 +1,12 @@
 <template name="postComment">
 	<div>
 		<form>
-			<input type="text" name="commentMessage" placeholder="Leave a comment!" />
-			<input type="submit" value="Post"/>
+			<div class="input-group form">
+				<input type="text" class="form-control" name="commentMessage" placeholder="Leave a comment!" />
+				<span class="input-group-btn">
+					<input type="submit" class="btn btn-default" value="Post"/>
+				</span>
+			</div>
 		</form>
 	</div>
 </template>
