--- a/spawn/client/templates/events/eventItem.html
+++ b/spawn/client/templates/events/eventItem.html
@@ -1,5 +1,5 @@
 <template name="eventItem">
 	<a href="{{pathFor 'viewEvent'}}" class="list-group-item">
-		{{name}} BY {{host}} AT {{time}}<span class="badge">14</span>
+		{{name}} BY {{host}} AT {{time}}<span class="badge">{{eventSize}}</span>
 	</a>
 </template>
