updates to packages including adding the ability to build for mobile iOS as well as using the MomentsJS package

--- a/spawn/client/templates/application/layout.html
+++ b/spawn/client/templates/application/layout.html
@@ -7,7 +7,7 @@
 						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a>
 					</li>
 				</ul>
-				<ul class="nav navbar-nav">
+				<ul class="nav navbar-nav navbar-left">
 					<li><a class="navbar-brand" href="/">Spawn</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-left">
