UI improvments including login, profile, and event viewing

--- a/spawn/client/templates/application/layout.html
+++ b/spawn/client/templates/application/layout.html
@@ -2,15 +2,10 @@
 	<body style="margin-top: 66px;">
 		<nav class="navbar navbar-default navbar-fixed-top" > 
 			<div class="container-fluid">
-				<ul class="nav navbar-nav navbar-left">
-					<li><a class="navbar-link" id="backLink" href="/prof">
-						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a>
-					</li>
-				</ul>
-				<ul class="nav navbar-nav navbar-left">
+				<ul id="spawnLogo" class="nav navbar-nav navbar-left">
 					<li><a class="navbar-brand" href="/">Spawn</a></li>
 				</ul>
-				<ul class="nav navbar-nav navbar-left">
+				<ul id="spawnPlus" class="nav navbar-nav navbar-left">
 					<li>
 						<a class="navbar-link" id="newEventLink" href="/add">
 							<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -19,7 +14,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<span class="navbar-text">{{> login}}</span>
+						<span id="loginSection" class="navbar-text">{{> login}}</span>
 					</li>
 				</ul>
 			</div>
