--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -1,7 +1,10 @@
 <template name="viewEvent">
   <body>
-    <div class = "container-fluid">
-      <div class = "row">
+    <div class="container-fluid">
+
+    <h1 id="eventTitle">Event: {{name}}</h1>
+
+      <div class="row">
         <div class="col-lg-6">
           <a href="href" class="thumbnail">
             <img id="eventPicture" src="http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif">
@@ -9,11 +12,10 @@
         </div>
         <div class="col-lg-6">
           <ul class="list-group">
-            <li class="list-group-item">Event: {{name}}</li>
-            <li class="list-group-item">Host: {{host}}</li>
-            <li class="list-group-item">Time: {{time}}</li>
-            <li class="list-group-item">Location</li>
-            <li class="list-group-item">Description: {{description}}</li>
+            <li class="list-group-item"><b>Host:</b> {{host}}</li>
+            <li class="list-group-item"><b>Time:</b> {{time}}</li>
+            <li class="list-group-item"><b>Location:</b> some coordinates</li>
+            <li class="list-group-item"><b>Description:</b> {{description}}</li>
           </ul>
           <div class="well">
             <span>Participants: {{attendees.length}}</span>
@@ -22,16 +24,22 @@
           </div>
         </div>
       </div>
+
+
+
       <h2>Participants</h2>
       <div id="fbPhotoCircles" class="row well">
         {{#each attendees}}
-          <div class="col-sm-3">
-            <p>{{this.name}}</p>
-            <img src={{this.pic}}>  
+          <div class="col-sm-2">
+            <p id="joinedName">{{this.name}}</p>
+            <div id="joinedImg" class="thumbnail img-responsive">
+              <img src={{this.pic}}>
+            </div>
           </div>  
         {{/each}}    
-
       </div>
+
+
 
       <h2>Comments</h2>
       <div class = "row well">
@@ -40,6 +48,8 @@
           {{/each}}
           {{> postComment}}
       </div>
+
+
     </div>
   </body>
 </template>
