--- a/spawn/client/templates/facebook/login.html
+++ b/spawn/client/templates/facebook/login.html
@@ -1,9 +1,12 @@
 <template name="login">
     {{#if currentUser}}
-        {{currentUser.services.facebook.name}} -
-        {{currentUser.services.facebook.gender}}
-        <button id="logout">Logout</button>
+    	<a href="/prof">
+    		<span id="ownProfGlyph" class="glyphicon glyphicon-user" aria-hidden="true"></span>
+        	<span>{{currentUser.services.facebook.name}}</span>
+        	<!-- {{currentUser.services.facebook.gender}} -->
+        </a>
+        <button class="btn btn-default customFBLog" id="logout">Logout</button>
     {{else}}
-        <button id="facebook-login" class="btn btn-default">Login with Facebook</button>
+        <button id="facebook-login" class="btn btn-default customFBLog">Login with Facebook</button>
     {{/if}}
 </template>
