--- a/spawn/client/stylesheets/style.css
+++ b/spawn/client/stylesheets/style.css
@@ -42,11 +42,22 @@ body {
 #joinedImg {
   max-width: 160px;
   max-height: 160px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  /*margin-bottom: 10px;*/
+}
+
+#joinedImgBox {
+  max-width: 180px;
+  margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #joinedName {
-  margin-top: 10px;
+  /*margin-top: 10px;*/
   text-align: center;
   margin-bottom: 0px;
 }
