--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -5,12 +5,12 @@
             <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-2">
-                    <a href="#" class="thumbnail">
-                        <img id="eventPicture" style="display:inline" src={{currentUser.profile.picture}}>
+                    <a href={{currentUser.services.facebook.link}} class="thumbnail">
+                        <img id="eventPicture" style="display:inline" src={{this.profile.picture}}>
                     </a>
                 </div>
                 <div class="col-sm-7">
-                    <h1 id="profilePageName">{{currentUser.profile.name}}</h1>
+                    <h1 id="profilePageName">{{this.profile.name}}</h1>
                 </div>
             </div>
 
