--- a/spawn/client/templates/addition/addEvent.html
+++ b/spawn/client/templates/addition/addEvent.html
@@ -1,20 +1,46 @@
 <template name="addEvent">
   <div>
     <form>
-      Name:
-      <input type="text" name="eventName" placeholder="Type to add new tasks" />
+
+      <div class="form-group">
+        <label for="eventNameInput">Event Name</label>
+        <input type="text" class="form-control" name="eventName" id="eventNameInput" placeholder="Event Name">
+      </div>
+
+      <div class="form-group">
+        <label for="EventDescriptionInput">Event Description</label>
+        <input type="text" class="form-control" name="eventDescription" id="EventDescriptionInput" placeholder="Description for your new event">
+      </div>
+
+      <div class="form-group">
+        <label for="EventTimeInput">Event Time</label>
+        <input type="time" class="form-control" name="eventTime" id="EventTimeInput">
+      </div>
+
+      <div class="radio-inline">
+        <label>
+        <input type="radio" name="eventVisibility" id="visibilityRadios1" value="public" checked>
+          Public
+        </label>
+      </div>
+      <div class="radio-inline">
+        <label>
+          <input type="radio" name="eventVisibility" id="visibilityRadios2" value="private">
+          Private
+        </label>
+      </div>
+
       <br>
-      <input type="radio" name="eventVisibility" value="public" checked> public
+      <button type="submit" class="btn btn-default">Create Event</button>
+
+
+      <!-- Description: -->
+      <!-- <input type="text" name="eventDescription" placeholder="Type to add new tasks" /> -->
       <br>
-      <input type="radio" name="eventVisibility" value="private"> private
+      <!-- Time: -->
+      <!-- <input type="time" name="eventTime"> -->
       <br>
-      Description:
-      <input type="text" name="eventDescription" placeholder="Type to add new tasks" />
-      <br>
-      Time:
-      <input type="time" name="eventTime">
-      <br>
-      <input type="submit">
+      <!-- <input type="submit"> -->
     </form>
   </div>
 </template>
