--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-6">
           <ul class="list-group">
-            <li class="list-group-item"><b>Host:</b> {{hostUid}}</li>
+            <li class="list-group-item"><b>Host:</b> {{host}}</li>
             <li class="list-group-item"><b>Time:</b> {{time}}</li>
             <li class="list-group-item"><b>Location:</b> some coordinates</li>
             <li class="list-group-item"><b>Description:</b> {{description}}</li>
