--- a/spawn/client/templates/addition/addEvent.html
+++ b/spawn/client/templates/addition/addEvent.html
@@ -4,17 +4,17 @@
 
       <div class="form-group">
         <label for="eventNameInput">Event Name</label>
-        <input type="text" class="form-control" name="eventName" id="eventNameInput" placeholder="Event Name">
+        <input type="text" class="form-control" name="eventName" id="eventNameInput" placeholder="Event Name" required>
       </div>
 
       <div class="form-group">
         <label for="EventDescriptionInput">Event Description</label>
-        <input type="text" class="form-control" name="eventDescription" id="EventDescriptionInput" placeholder="Description for your new event">
+        <input type="text" class="form-control" name="eventDescription" id="EventDescriptionInput" placeholder="Description for your new event" required>
       </div>
 
       <div class="form-group">
-        <label for="EventTimeInput">Event Time</label>
-        <input type="time" class="form-control" name="eventTime" id="EventTimeInput">
+        <label for="EventTimeInput">Event Time (EST)</label>
+        <input type="time" class="form-control" name="eventTime" id="EventTimeInput" required>
       </div>
 
       <div class="radio-inline">
