added initial map functionality

--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -7,8 +7,10 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <a href="href" class="thumbnail">
-            <img id="eventPicture" src="http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif">
+          <a class="thumbnail">
+              <div class="map-container">
+                {{> googleMap name="exampleMap" options=exampleMapOptions}}
+              </div>
           </a>
         </div>
         <div class="col-lg-6">
