--- a/spawn/client/stylesheets/style.css
+++ b/spawn/client/stylesheets/style.css
@@ -68,3 +68,9 @@ body {
   text-align: center;
   margin-bottom: 20px;
 }
+
+.map-container {
+  width: 800px;
+  max-width: 100%;
+  height: 500px;
+}
