--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -7,11 +7,15 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <a class="thumbnail">
+          <div class="thumbnail">
               <div class="map-container">
-                {{> googleMap name="exampleMap" options=exampleMapOptions}}
+                {{#unless geolocationError}}
+                  {{> googleMap name="map" options=mapOptions}}
+                {{else}}
+                  Geolocation failed: {{geolocationError}}
+                {{/unless}}
               </div>
-          </a>
+          </div>
         </div>
         <div class="col-lg-6">
           <ul class="list-group">
