--- a/spawn/client/templates/addition/addEvent.html
+++ b/spawn/client/templates/addition/addEvent.html
@@ -30,6 +30,8 @@
         </label>
       </div>
 
+      {{> addEventMap}}
+      
       <br>
       <button type="submit" class="btn btn-default">Create Event</button>
 
