--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -7,15 +7,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <div class="thumbnail">
-              <div class="map-container">
-                {{#unless geolocationError}}
-                  {{> googleMap name="map" options=mapOptions}}
-                {{else}}
-                  Geolocation failed: {{geolocationError}}
-                {{/unless}}
-              </div>
-          </div>
+          {{> displayEventMap}}
         </div>
         <div class="col-lg-6">
           <ul class="list-group">
