--- a/spawn/client/templates/addition/addEvent.html
+++ b/spawn/client/templates/addition/addEvent.html
@@ -1,5 +1,5 @@
 <template name="addEvent">
-  <div>
+  <div class="col-lg-6">
     <form>
 
       <div class="form-group">
@@ -30,11 +30,9 @@
         </label>
       </div>
 
-      {{> addEventMap}}
-      
       <br>
+      
       <button type="submit" class="btn btn-default">Create Event</button>
-
 
       <!-- Description: -->
       <!-- <input type="text" name="eventDescription" placeholder="Type to add new tasks" /> -->
@@ -44,5 +42,9 @@
       <br>
       <!-- <input type="submit"> -->
     </form>
+  </div>
+
+  <div class="col-lg-6">
+      {{> addEventMap}}
   </div>
 </template>
