--- a/spawn/client/templates/events/eventItem.html
+++ b/spawn/client/templates/events/eventItem.html
@@ -1,3 +1,9 @@
+<!--
+TODO:
+Maybe show first 100 words or so of description
+Add max participants
+
+-->
 <template name="eventItem">
 	<a href="{{pathFor 'viewEvent'}}" class="list-group-item">
 		{{name}} BY {{host}} AT {{time}}<span class="badge">{{getCountdown}}</span><span class="badge">{{eventSize}}</span>
