fixed a map integration error

--- a/spawn/client/templates/list/eventsPage.html
+++ b/spawn/client/templates/list/eventsPage.html
@@ -1,7 +1,7 @@
 <template name="eventsPage">
 	<h1>Choose an event!</h1>
-    {{> searchBar}}
-    {{> searchResult}}
+    <!--{{> searchBar}}
+    {{> searchResult}}-->
     <div class="list-group">
         {{#each tasks}}
             {{> eventItem}}
