--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -6,7 +6,7 @@
                 <div class="col-sm-3"></div>
                 <div class="col-sm-2">
                     <a href={{currentUser.services.facebook.link}} class="thumbnail">
-                        <img id="eventPicture" style="display:inline" src={{this.profile.picture}}>
+                        <img class="img-rounded" id="eventPicture" style="display:inline" src={{this.profile.picture}}>
                     </a>
                 </div>
                 <div class="col-sm-7">
