added location names and addresses

--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -13,7 +13,7 @@
           <ul class="list-group">
             <li class="list-group-item"><b>Host:</b> {{host}}</li>
             <li class="list-group-item"><b>Time:</b> {{time}}</li>
-            <li class="list-group-item"><b>Location:</b> some coordinates</li>
+            <li class="list-group-item"><b>Location:</b> {{locationName}}</li>
             <li class="list-group-item"><b>Description:</b> {{description}}</li>
           </ul>
           <div class="well">
