--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -1,10 +1,19 @@
 <template name="viewEvent">
   <body>
     <div class="container-fluid">
-
-    <h1 id="eventTitle">{{name}} 
-        {{#if isHost}}<span><button type="button" id="deleteEvent" class="btn btn-default">Delete Event</button></span>{{/if}}</h1>
-
+    
+    <div class="row">
+        <div class="col-md-3 text-left">
+            <h3>{{getCountdown}}</h3>
+        </div>   
+        <div class="col-md-6">
+            <h1 id="eventTitle">{{name}}</h1> 
+            </div>
+        <div class="col-md-3 text-right">
+            <h3>{{#if isHost}}<span><button type="button" id="deleteEvent" class="btn btn-default">Delete Event</button></span>{{/if}}</h3>
+        </div>
+    </div>
+        
       <div class="row">
         <div class="col-lg-6">
           {{> displayEventMap}}
@@ -17,7 +26,7 @@
             <li class="list-group-item"><b>Description:</b> {{description}}</li>
           </ul>
           <div class="well">
-            <span>Participants: {{attendees.length}}</span>
+            <span>Participants: {{attendees.length}}/{{numParticipants}}</span>
              {{#if isParticipating}}
                 <span><button type="button" id="leaveEvent" class="btn btn-default">Leave Event</button></span>
              {{else}}
