--- a/spawn/client/templates/list/eventsPage.html
+++ b/spawn/client/templates/list/eventsPage.html
@@ -2,9 +2,11 @@
 	<h1>Choose an event!</h1>
     <!--{{> searchBar}}
     {{> searchResult}}-->
-    <div class="list-group">
+    {{> search}}
+    
+    <!--<div class="list-group">
         {{#each tasks}}
             {{> eventItem}}
         {{/each}}
-    </div>
+    </div>-->
 </template>
