--- a/spawn/client/templates/list/search.html
+++ b/spawn/client/templates/list/search.html
@@ -1,23 +1,21 @@
-<template name="searchBar">
-        <form class="navbar-form" role="search">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="search events here" name="searchText" id="search-bar">
-                <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                </div>
-            </div>
-        </form>
-</template>
-
-<template name = "searchResult">
+<template name="search">
+    {{> EasySearch.Input index=tasksIndex attributes=inputAttributes}}
+    
     <div class="list-group">
-        <div id="search-meta">
-            {{#if isLoading}}
-                searching ...
-            {{/if}}
-        </div>
-        {{#each getTasks}}
+     {{#EasySearch.IfInputEmpty index=tasksIndex}}
+        {{#each tasks}}
             {{> eventItem}}
         {{/each}}
+    {{/EasySearch.IfInputEmpty}}
     </div>
+    
+    <div class="list-group">
+        {{#EasySearch.Each index=tasksIndex}}
+            {{> eventItem}}
+        {{/EasySearch.Each}}
+     </div>
+
+     {{#EasySearch.IfNoResults index=tasksIndex}}
+        <div class="no-results">No results found!</div>
+     {{/EasySearch.IfNoResults}}
 </template>
