--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -17,7 +17,7 @@
             <h3>Friends</h3>
             <div class="list-group">
                 {{#each friends}}
-                    name
+                    {{this}}
                 {{/each}}
             </div>
 
