fixed layout issues

--- a/spawn/client/templates/list/eventsPage.html
+++ b/spawn/client/templates/list/eventsPage.html
@@ -1,5 +1,7 @@
 <template name="eventsPage">
+	<div>
 	<h1>Choose an event!</h1>
+	</div>
     <!--{{> searchBar}}
     {{> searchResult}}-->
     {{> search}}
