--- a/spawn/client/templates/list/search.html
+++ b/spawn/client/templates/list/search.html
@@ -1,24 +1,36 @@
 <template name="search">
+    <!-- <div class="container"> -->
     <div class="row">
-        <div class="pull-left">
+    <div class="col-xs-5">
+        <div>
             <span>Filter by:</span>
             <label class="checkbox-inline"><input type="checkbox" name="hostFilter" id="hostFilter" value="" checked>Host</label>
             <label class="checkbox-inline"><input type="checkbox" name="eventNameFilter" id="eventNameFilter" value="" checked>Event name</label>
             <label class="checkbox-inline"><input type="checkbox" name="descriptionFilter" id="descriptionFilter" value="" checked>Description</label>
         </div>
-        <div class="pull-right">
+        <div class="input-group form">
+            <input type="text" class="form-control" name="searchTerm" id="searchTerm" placeholder="search events here" />
+        </div>
+        <!-- <div>
+            <span>Sort by:</span>
+            <label class="radio-inline"><input type="radio" name="sortRadio" id="hostRadio" value="">Host</label>
+            <label class="radio-inline"><input type="radio" name="sortRadio" id="eventNameRadio" value="">Event name</label>
+            <label class="radio-inline"><input type="radio" name="sortRadio" id="capacityRadio" value="">Capacity</label>
+            <label class="radio-inline"><input type="radio" name="sortRadio" id="timeUntilRadio" value="" checked="checked">Time left</label>
+        </div> -->
+    </div>
+    <div class="col-xs-7">
+        <!-- <div class="input-group form">
+            <input type="text" class="form-control" name="searchTerm" id="searchTerm" placeholder="search events here" />
+        </div> -->
+        <div>
             <span>Sort by:</span>
             <label class="radio-inline"><input type="radio" name="sortRadio" id="hostRadio" value="">Host</label>
             <label class="radio-inline"><input type="radio" name="sortRadio" id="eventNameRadio" value="">Event name</label>
             <label class="radio-inline"><input type="radio" name="sortRadio" id="capacityRadio" value="">Capacity</label>
             <label class="radio-inline"><input type="radio" name="sortRadio" id="timeUntilRadio" value="" checked="checked">Time left</label>
         </div>
-    </div>
-    <div class="row">
-        <div class="input-group form pull-left">
-            <input type="text" class="form-control" name="searchTerm" id="searchTerm" placeholder="search events here" />
-        </div>
-        <div class="pull-right">
+        <div>
             <span>Direction:</span>
             <label class="radio-inline"><input type="radio" name="directionRadio" id="ascendingRadio" value="" checked="checked">Ascending</label>
             <label class="radio-inline"><input type="radio" name="directionRadio" id="descendingRadio" value="">Descending</label>
@@ -27,7 +39,7 @@
     
     
 
-    <div class="row">
+    <div class="col-xs-12" style="margin-top: 10px;">
         <div class="list-group">
             {{#each results}}
                 {{> eventItem}}
@@ -36,7 +48,7 @@
     </div>
     
     {{#if noResults}}
-         <div class="no-results">No results found!</div>
+         <div class="no-results col-xs-12">No results found!</div>
     {{/if}}
     <!--{{> EasySearch.Input index=tasksIndex attributes=inputAttributes}}
     
@@ -57,4 +69,6 @@
      {{#EasySearch.IfNoResults index=tasksIndex}}
         <div class="no-results">No results found!</div>
      {{/EasySearch.IfNoResults}}-->
+    </div>
+    <!-- </div> -->
 </template>
