--- a/spawn/client/stylesheets/style.css
+++ b/spawn/client/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 #spawnLogo {
-  margin-left: 30px;
+  margin-left: 10px;
 }
 
 #spawnLogo, #spawnPlus {
@@ -15,6 +15,7 @@ body {
 
 .customFBLog {
   padding: 3px 10px 3px 10px;
+  margin-right: 14px;
   margin-left: 8px;
 }
 
