--- a/spawn/client/templates/application/layout.html
+++ b/spawn/client/templates/application/layout.html
@@ -1,5 +1,5 @@
 <template name="layout">
-	<body style="margin-top: 66px;">
+	<body style="margin-top: 46px;">
 		<nav class="navbar navbar-default navbar-fixed-top" > 
 			<div class="container-fluid">
 				<ul id="spawnLogo" class="nav navbar-nav navbar-left">
@@ -20,7 +20,7 @@
 			</div>
 		</nav>
 
-		<div id="main" style="margin-left: 15px; margin-right: 15px;">
+		<div id="main" class="container-fluid" style="margin-left: 25px; margin-right: 25px;">
 			{{> yield}}
 		</div>
 	</body>
