--- a/spawn/client/templates/events/eventItem.html
+++ b/spawn/client/templates/events/eventItem.html
@@ -9,26 +9,22 @@ Add max participants
 
         <div class="row"><span><h2>{{name}}</h2></span></div>
         <div class="row">
-            <span><h6>Hosted by {{host}}</h6></span>
+            <span><h6>Hosted by {{host}} at {{get12Time}}</h6></span>
         </div>
         <div class="row">
             <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}> </div>
             <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}></div>
             <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}></div>
             <div class="col-xs-2 tile-bar">
-                <h1>+5</h1></div>
-            <div class="col-xs-2"><span class="badge">{{eventSize}}</span></div>
+                <h1>+{{numParticipants}}</h1></div>
+            <div class="col-xs-2"><span class="badge">{{getDistance}} miles</span></div>
         </div>
         <div class="row">
             <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}> </div>
             <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}></div>
             <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}></div>
-            <div class="col-xs-2 tile-bar">
-                <h1>+5</h1></div>
+            <div class="col-xs-2 tile-bar"></div>
             <div class="col-xs-2"><span class="badge">{{getCountdown}}</span></div>
         </div>
     </a>
-    <a href="{{pathFor 'viewEvent'}}" class="list-group-item">
-		{{name}} BY {{host}} AT {{get12Time}}<span class="badge">{{getCountdown}}</span><span class="badge">{{eventSize}}/{{numParticipants}}</span><span class="badge">{{getDistance}} miles</span>
-	</a>
 </template>
