--- a/spawn/client/templates/list/search.html
+++ b/spawn/client/templates/list/search.html
@@ -28,11 +28,11 @@
     
 
     <div class="row">
-        <div class="list-group">
             {{#each results}}
-                {{> eventItem}}
-            {{/each}}
+                <div class="col-sm-4">
+            {{> eventItem}}
         </div>
+            {{/each}}
     </div>
     
     {{#if noResults}}
