--- a/spawn/client/templates/events/eventItem.html
+++ b/spawn/client/templates/events/eventItem.html
@@ -5,7 +5,7 @@ Add max participants
 
 -->
 <template name="eventItem">
-    <a href="{{pathFor 'viewEvent'}}" class="thumbnail">
+    <a href="{{pathFor 'viewEvent'}}" class="tile-thumbnail">
 
         <div class="row"><span><h2>{{name}}</h2></span></div>
         <div class="row">
