--- a/spawn/client/templates/list/search.html
+++ b/spawn/client/templates/list/search.html
@@ -39,9 +39,9 @@
     
     </div>
 
-    <div class="row" id="results">
+    <div class="row row-centered" id="results">
             {{#each results}}
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-centered">
             {{> eventItem}}
         </div>
             {{/each}}
