cleaned up top of page spacing

--- a/spawn/client/templates/addition/addEvent.html
+++ b/spawn/client/templates/addition/addEvent.html
@@ -1,4 +1,6 @@
 <template name="addEvent">
+  <!-- <div class="row"> -->
+  <h1>New Event</h1>
   <div class="col-lg-6">
     <form>
 
@@ -54,4 +56,5 @@
   <div class="col-lg-6">
       {{> addEventMap}}
   </div>
+  <!-- </div> -->
 </template>
